tests/specs/check/isolated_declarations/check.out
Check (tsc [WILDLINE])
TS9013 [ERROR]: Expression type can't be inferred with --isolatedDeclarations.
  return a + b;
         ^
    at file:///[WILDCARD]/main.ts:2:10

error: Type checking failed.
